# OpenVR-AdvancedSettings

./: .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  Readme.md  advancedSettings.pro  advancedSettings.pro.user.e9f45e7  appveyor.yml  build_windows.cmd  installer.nsi  package.cmd
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
IVRInput/: action_manifest.json  legacy_actions.json
build_scripts/: append_to_version_file.py  compile_version_string.txt
build_scripts/ci_images/: DockerfileArtifacts  README.md
build_scripts/linux/: PKGBUILD  appimage.sh  build_linux.sh  configure.sh  format  format.sh  run-clang-tidy.sh  run-with-library.sh  verify_formatting  verify_formatting.sh
build_scripts/qt/: resources.pri  sources.pri
build_scripts/qt/compilers/: clang-gcc-common-switches.pri  clang-msvc.pri  clang.pri  common-msvc.pri  gcc.pri  msvc.pri
build_scripts/win/: build.cmd  build.py  build_windows.cmd  common.py  deploy.cmd  deploy_windows.cmd  env.ps1.in  env.sh.in  format.cmd  package.cmd  package_windows.cmd  qt.conf.in  test.bat  verify_formatting.cmd  win_build.py
cmake/: CPackConfig.cmake
docs/: CONTRIBUTING.md  SteamVRInputGuide.md  building_for_linux.md  building_for_windows.md  developer_docs.md  keyboard_input_guide.md  pairing_guide.md
docs/specs/: Keyboard_Manager-Parser_Spec.md  Keyboard_Manager-Parser_Spec.txt  Settings-API.md  Settings-Object-API.md
installer/: installer.nsi  listUninstallFiles.sh  uninstallFiles.list
src/: logging.h  main.cpp  overlaycontroller.cpp  overlaycontroller.cpp.autosave  overlaycontroller.h  overlaywidget.cpp  overlaywidget.h  steamivrinput.cpp  steamivrinput.h
src/alarm_clock/: vr_alarm.cpp  vr_alarm.h
src/ivrinput/: ivrinput.cpp  ivrinput.h  ivrinput_action.h  ivrinput_action_set.h  ivrinput_input.h  ivrinput_input_source.h  ivrinput_manifest.h  steamivrinput.cpp  steamivrinput.h
src/keyboard_input/: input_parser.cpp  input_parser.h  input_sender.h  input_sender_X11.cpp  input_sender_dummy.cpp  input_sender_win.cpp  keyboard_input.cpp  keyboard_input.h
src/media_keys/: media_keys.cpp  media_keys.h  media_keys_dbus.cpp  media_keys_dummy.cpp  media_keys_win.cpp
src/openvr/: ivrinput.cpp  ivrinput.h  ivrinput_action.h  ivrinput_action_set.h  ivrinput_input_source.h  ivrinput_manifest.h  ivroverlay.cpp  ivroverlay.h  ivrsettings.cpp  ivrsettings.h  lh_console_util.cpp  lh_console_util.h  openvr_init.cpp  openvr_init.h  overlay_utils.cpp  overlay_utils.h  ovr_application_wrapper.cpp  ovr_application_wrapper.h  ovr_overlay_wrapper.cpp  ovr_overlay_wrapper.h  ovr_settings_wrapper.cpp  ovr_settings_wrapper.h  ovr_system_wrapper.cpp  ovr_system_wrapper.h
src/overlaycontroller/: openvr_init.cpp  openvr_init.h
src/package_files/: action_manifest.json  bindingsinterface.bat  manifest.vrmanifest  startdesktopmode.bat
src/package_files/default_action_manifests/: generic_hmd_defaults.json  ovras-team.advancedsettings_default_hmd.json  ovras-team.advancedsettings_default_hp_wmr.json  ovras-team.advancedsettings_default_knuckles.json  ovras-team.advancedsettings_default_touch.json  ovras-team.advancedsettings_default_vive_controller.json  ovras-team.advancedsettings_default_wmr.json  vive_defaults.json  vive_hmd_defaults.json
src/package_files/linux/: AdvancedSettings.desktop
src/quaternion/: quaternion.h
src/res/: icon.rc  resources.qrc
src/res/qml/: AccessibilityPage.qml  AudioPage.qml  BindingsPage.qml  ChaperonePage.qml  ChaperoneWarningsPage.qml  FixFloorPage.qml  MyComboBox.qml  MyDialogOkPopup.qml  MyResources.qml  MyStackViewPage.qml  MyToggleButton.qml  PlayspacePage.qml  PttControllerConfigDialog.qml  RevivePage.qml  RootPage.qml  SettingsPage.qml  StatisticsPage.qml  SteamVRPage.qml  UtilitiesPage.qml  mainwidget.qml  qmldir
src/res/qml/audio_page/: AudioPage.qml
src/res/qml/chaperone_page/: ChaperonePage.qml
src/res/qml/common/: FullWidthSliderBox.qml  HourComboBox.qml  LineSeparator.qml  MinuteSecondComboBox.qml  MyComboBox.qml  MyDialogOkCancelPopup.qml  MyDialogOkPopup.qml  MyPushButton.qml  MyPushButton2.qml  MyRadioButton.qml  MyResources.qml  (+7 more)
src/settings/: bool_setting_value.h  settings.cpp  settings.h  settings_controller.h  settings_internal.h  settings_object.cpp  settings_object.h  specific_setting_value.h
src/settings/internal/: double_setting_value.h  setting_value.h  settings_controller.h  settings_internal.h  settings_object_data.h  specific_setting_value.h
src/tabcontrollers/: AccessibilityTabController.cpp  AccessibilityTabController.h  AudioManager.h  AudioProfileController.cpp  AudioProfileController.h  AudioTabController.cpp  AudioTabController.h  ChaperoneTabController.cpp  ChaperoneTabController.h  FixFloorTabController.cpp  FixFloorTabController.h  KeyboardInput.h  MoveCenterTabController.cpp  MoveCenterTabController.h  PttController.cpp  PttController.h  ReviveTabController.cpp  ReviveTabController.h  RotationTabController.cpp  RotationTabController.h  SettingsTabController.cpp  SettingsTabController.h  StatisticsTabController.cpp  StatisticsTabController.h  SteamVRTabController.cpp  SteamVRTabController.cpp.autosave  SteamVRTabController.h  UtilitiesTabController.cpp  UtilitiesTabController.h  VideoTabController.cpp  VideoTabController.h
src/tabcontrollers/audiomanager/: AudioManager.h  AudioManagerDummy.cpp  AudioManagerDummy.h  AudioManagerPulse.cpp  AudioManagerPulse.h  AudioManagerPulse_internal.h  AudioManagerWindows.cpp  AudioManagerWindows.h  IPolicyConfig.h
src/tabcontrollers/keyboardinput/: KeyboardInput.cpp  KeyboardInput.h  KeyboardInputDummy.cpp  KeyboardInputDummy.h  KeyboardInputWindows.cpp  KeyboardInputWindows.h  KeyboardInputX11.cpp
src/utils/: ChaperoneUtils.cpp  ChaperoneUtils.h  FrameRateUtils.cpp  FrameRateUtils.h  Matrix.h  paths.cpp  paths.h  quaternion.h  setup.cpp  setup.h  update_rate.cpp  update_rate.h
test/keyboard_input/: keyboard_input.pro  tst_parsertest.cpp
ui/: overlaywidget.ui
ver/: versioncheck.json
(+66 files in other folders)
